# minesweeper-cli

./: .gitignore  Cargo.toml  README.md
src/: main.rs  minesweeper.rs
src/ui/: game.rs  menu.rs  mod.rs
src/utils/: cell.rs  input.rs  mod.rs  prefs.rs  random.rs  theme.rs
themes/: ascii.json  emoji.json  icons.json  minimal.json
