[package]
name = "minesweeper-cli"
version = "0.1.0"
edition = "2024"
description = "A fast, lightweight, and minimalist terminal-based Minesweeper game written in Rust."
license = "MIT"
repository = "https://github.com/ibrohim-b/minesweeper-cli"

[[bin]]
name = "minesweeper"
path = "src/main.rs"

[dependencies]
clearscreen = "4.0.6"
rand = "0.8"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.1"
dirs = "5"